--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore configuration files that may contain sensitive information.
-sites/default/settings*.php
+sites/*/settings*.php
 
 # Ignore paths that contain user-generated content.
-sites/default/files
-#sites/*/private
+sites/*/files
+sites/*/private
