--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
+sites/*/settings.php
 
 # Ignore paths that contain user-generated content.
 sites/*/files
