--- a/.htaccess
+++ b/.htaccess
@@ -124,6 +124,9 @@ DirectoryIndex index.php index.html index.htm
   # Rules to correctly serve gzip compressed CSS and JS files.
   # Requires both mod_rewrite and mod_headers to be enabled.
   <IfModule mod_headers.c>
+    
+    Header add Access-Control-Allow-Origin "*"
+
     # Serve gzip compressed CSS files if they exist and the client accepts gzip.
     RewriteCond %{HTTP:Accept-encoding} gzip
     RewriteCond %{REQUEST_FILENAME}\.gz -s
