--- a/.htaccess
+++ b/.htaccess
@@ -126,6 +126,8 @@ DirectoryIndex index.php index.html index.htm
   <IfModule mod_headers.c>
     
     Header add Access-Control-Allow-Origin "*"
+    
+    Header add Access-Control-Allow-Methods "*"
 
     # Serve gzip compressed CSS files if they exist and the client accepts gzip.
     RewriteCond %{HTTP:Accept-encoding} gzip
